feat: task CRUD
